# Shifro-Pi5

./: CMakeLists.txt  README.md  install_autostart.sh
include/: basic_font.h  cmac.h  colors.h  commands.h  counter_mode.h  cyrillic_font.h  display_pi.h  encryption_app.h  font.h  keyboard.h  kuznechik.h  spi_pi.h  type.h  utf8_helper.h
src/: cmac.cpp  counter_mode.cpp  display_pi.cpp  encryption_app.cpp  keyboard.cpp  kuznechik.c  main.cpp  spi_pi.cpp
